--- a/app/src/main/res/layout/activity_show_actvity.xml
+++ b/app/src/main/res/layout/activity_show_actvity.xml
@@ -72,23 +72,25 @@
         app:layout_constraintHorizontal_bias="0.424"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox_1" />
+
     <CheckBox
         android:id="@+id/checkBox_3"
         android:layout_width="185dp"
         android:layout_height="35dp"
         android:layout_marginTop="4dp"
-        android:text="@string/fdi_inflow"
+        android:text="@string/fdi_outflow"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.424"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox_2" />
+
     <CheckBox
         android:id="@+id/checkBox_4"
         android:layout_width="185dp"
         android:layout_height="35dp"
         android:layout_marginTop="4dp"
-        android:text="@string/fdi_inflow"
+        android:text="@string/import_export"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.424"
